// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render Home page/component edit state data 1`] = `
<Home>
  <Card>
    <div
      className="Card-RQot etQKCJ"
    >
      <Home__DateText>
        <p
          className="Home__DateText-esEHDJ bwIpuS"
        >
          🗓 This week: 
          <DayOfWeek
            dayIndex={5}
          >
            
      Friday
      8
      June
      2018
    
          </DayOfWeek>
        </p>
      </Home__DateText>
      <Home__ContentHolder>
        <div
          className="Home__ContentHolder-gUdnxm iZrFBv"
        >
          <div>
            <Home__DummyBox>
              <div
                className="Home__DummyBox-fvtzal cVwnRB"
              />
            </Home__DummyBox>
            <Home__DummyBox>
              <div
                className="Home__DummyBox-fvtzal gMBrnO"
              />
            </Home__DummyBox>
          </div>
          <Home__Icon
            role="presentation"
          >
            <div
              className="Home__Icon-hrYzli jWbxKN"
              role="presentation"
            >
              🍔
            </div>
          </Home__Icon>
        </div>
      </Home__ContentHolder>
    </div>
  </Card>
</Home>
`;

exports[`Should render Home page/component mounted snapshot should work 1`] = `
<Home>
  <Card>
    <div
      className="Card-RQot etQKCJ"
    >
      <Home__DateText>
        <p
          className="Home__DateText-esEHDJ bwIpuS"
        >
          🗓 This week: 
          <DayOfWeek
            dayIndex={5}
          >
            
      Friday
      8
      June
      2018
    
          </DayOfWeek>
        </p>
      </Home__DateText>
      <Home__ContentHolder>
        <div
          className="Home__ContentHolder-gUdnxm iZrFBv"
        >
          <div>
            <Home__DummyBox>
              <div
                className="Home__DummyBox-fvtzal cVwnRB"
              />
            </Home__DummyBox>
            <Home__DummyBox>
              <div
                className="Home__DummyBox-fvtzal gMBrnO"
              />
            </Home__DummyBox>
          </div>
          <Home__Icon
            role="presentation"
          >
            <div
              className="Home__Icon-hrYzli jWbxKN"
              role="presentation"
            >
              🍔
            </div>
          </Home__Icon>
        </div>
      </Home__ContentHolder>
    </div>
  </Card>
</Home>
`;

exports[`Should render Home page/component shallow snapshot should work 1`] = `
<React.Fragment>
  <Card>
    <Home__DateText>
      🗓 This week: 
      <DayOfWeek
        dayIndex={5}
      />
    </Home__DateText>
    <Home__ContentHolder>
      <div>
        <React.Fragment>
          <Home__DummyBox />
          <Home__DummyBox />
        </React.Fragment>
      </div>
      <Home__Icon
        role="presentation"
      >
        🍔
      </Home__Icon>
    </Home__ContentHolder>
  </Card>
</React.Fragment>
`;

exports[`Should render Home page/component shallow snapshot with data 1`] = `
<React.Fragment>
  <Card>
    <Home__DateText>
      🗓 This week: 
      <DayOfWeek
        dayIndex={5}
      />
    </Home__DateText>
    <Home__ContentHolder>
      <div>
        <React.Fragment>
          <Home__Title>
            Hi 
            <Home__PersonName>
              Megatron
              !
            </Home__PersonName>
          </Home__Title>
          <p>
            It is your turn to pick this week.
          </p>
        </React.Fragment>
      </div>
      <Home__Icon
        role="presentation"
      >
        🍔
      </Home__Icon>
    </Home__ContentHolder>
    <UsersList
      activeUserIndex={0}
      users={
        Array [
          Object {
            "name": "Megatron",
            "uid": 4,
          },
          Object {
            "name": "Jojo",
            "uid": 6,
          },
        ]
      }
    />
  </Card>
</React.Fragment>
`;
